Next work link were broken, they now are fixed

--- a/html/english/Love-Letter.html
+++ b/html/english/Love-Letter.html
@@ -198,7 +198,7 @@
       </div> <!-- container end -->
 
       <div class="col-lg-12 text-center top_90">
-        <a class="next-link" href="work-3.html">
+        <a class="next-link" href="/html/english/work-3.html">
           <div class="nav-title">Next Work</div>
           <div class="next-title">Signé Toqué</div>
         </a>
