--- a/html/english/UI-UX-Illustrations.html
+++ b/html/english/UI-UX-Illustrations.html
@@ -208,7 +208,7 @@
         <!-- project-detail end -->
         <section>
             <div class="col-lg-12 text-center">
-                <a class="next-link" href="jerk-project.html">
+                <a class="next-link" href="/html/english/jerk-project.html">
                     <div class="nav-title">Next Work</div>
                     <div class="next-title">The Jerk Project</div>
                 </a>
