--- a/html/spanish/Galaxy.html
+++ b/html/spanish/Galaxy.html
@@ -530,7 +530,7 @@
     <!-- Next -->
     <section>
       <div class="col align-self-center text-center top_30">
-        <a class="next-link" href="es-USA-Today.html">
+        <a class="next-link" href="/html/spanish/USA-Today.html">
           <div class="nav-title">Siguiente</div>
           <div class="next-title">USA Today</div>
         </a>
