--- a/html/spanish/Gallo-Guapo.html
+++ b/html/spanish/Gallo-Guapo.html
@@ -200,7 +200,7 @@
 
     <section class="white-bg">
       <div class="col-lg-12 text-center">
-        <a class="next-link" href="es-UI-UX-Illustrations.html">
+        <a class="next-link" href="/html/spanish/UI-UX-Illustrations.html">
           <div class="nav-title">Siguiente</div>
           <div class="next-title">UI/UX ilustración de personajes</div>
         </a>
