--- a/html/spanish/Library-of-Congress.html
+++ b/html/spanish/Library-of-Congress.html
@@ -242,7 +242,7 @@
     </section>
     <section data-midnight="white">
       <div class="col-lg-12 text-center">
-        <a class="next-link" href="es-Galaxy.html">
+        <a class="next-link" href="/html/spanish/Galaxy.html">
           <div class="nav-title">Siguiente</div>
           <div class="next-title">Galaxy</div>
         </a>
