--- a/html/english/Biodiversity-Festival.html
+++ b/html/english/Biodiversity-Festival.html
@@ -261,7 +261,7 @@
 
     <section>
       <div class="col-lg-12 text-center">
-        <a class="next-link" href="Creating-Change.html">
+        <a class="next-link" href="/html/english/Creating-Change.html">
           <div class="nav-title">Next Work</div>
           <div class="next-title">Creating Change</div>
         </a>
