--- a/html/english/Creating-Change.html
+++ b/html/english/Creating-Change.html
@@ -245,7 +245,7 @@
     <!-- ======= Next Page / Start ========== -->
     <section class="white-bg">
       <div class="col-lg-12 text-center">
-        <a class=" next-link" href="Storytelling-Bootcamp.html">
+        <a class=" next-link" href="/html/english/Storytelling-Bootcamp.html">
           <div class="nav-title">Next Work</div>
           <div class="next-title">Storytelling Bootcamp</div>
         </a>
