--- a/html/english/Gallo-Guapo.html
+++ b/html/english/Gallo-Guapo.html
@@ -236,7 +236,7 @@
 
     <section class="white-bg">
       <div class="col-lg-12 text-center">
-        <a class="next-link" href="UI-UX-Illustrations.html">
+        <a class="next-link" href="/html/english/UI-UX-Illustrations.html">
           <div class="nav-title">Next Work</div>
           <div class="next-title">UI/UX Characters</div>
         </a>
