--- a/html/english/Library-of-Congress.html
+++ b/html/english/Library-of-Congress.html
@@ -235,7 +235,7 @@
     </section>
     <section>
       <div class="col-lg-12 text-center">
-        <a class="next-link" href="Galaxy.html">
+        <a class="next-link" href="/html/english/Galaxy.html">
           <div class="nav-title">Next Work</div>
           <div class="next-title">Galaxy</div>
         </a>
