--- a/html/english/Racing-Extinction.html
+++ b/html/english/Racing-Extinction.html
@@ -212,7 +212,7 @@
 
     <section class="white-bg">
       <div class="col-lg-12 text-center">
-        <a class="next-link" href="Gallo-Guapo.html">
+        <a class="next-link" href="/html/english/Gallo-Guapo.html">
           <div class="nav-title">Next Work</div>
           <div class="next-title">Gallo Guapo</div>
         </a>
