--- a/html/english/Storytelling-Bootcamp.html
+++ b/html/english/Storytelling-Bootcamp.html
@@ -217,7 +217,7 @@
 
         <section class=" white-bg">
             <div class="col-lg-12 text-center">
-                <a class="next-link" href="Racing-Extinction.html">
+                <a class="next-link" href="/html/english/Racing-Extinction.html">
                     <div class="nav-title">Next Work</div>
                     <div class="next-title">Racing Extinction</div>
                 </a>
