--- a/html/english/USA-Today.html
+++ b/html/english/USA-Today.html
@@ -363,7 +363,7 @@
 
     <section class="white-bg">
       <div class="col-lg-12 text-center">
-        <a class="next-link" href="Creating-Change.html">
+        <a class="next-link" href="/html/english/Creating-Change.html">
           <div class="nav-title">Next Work</div>
           <div class="next-title">Creating-Change</div>
         </a>
