--- a/html/english/toucan-template.html
+++ b/html/english/toucan-template.html
@@ -373,7 +373,7 @@
         <!-- Next -->
         <section class="white-bg">
             <div class="col align-self-center text-center">
-                <a class="next-link" href="USA-Today.html">
+                <a class="next-link" href="/html/english/USA-Today.html">
                     <div class="nav-title">Next Work</div>
                     <div class="next-title">USA Today</div>
                 </a>
