--- a/html/spanish/Racing-Extinction.html
+++ b/html/spanish/Racing-Extinction.html
@@ -221,7 +221,7 @@
 
     <section class="white-bg" data-midnight="white">
       <div class="col-lg-12 text-center">
-        <a class="next-link" href="es-Gallo-Guapo.html">
+        <a class="next-link" href="/html/spanish/Gallo-Guapo.html">
           <div class="nav-title">Siguiente</div>
           <div class="next-title">Gallo Guapo</div>
         </a>
