--- a/html/spanish/UI-UX-Illustrations.html
+++ b/html/spanish/UI-UX-Illustrations.html
@@ -212,7 +212,7 @@
         <!-- project-detail end -->
 
         <div class="col-lg-12 text-center bottom_90" data-midnight="white">
-            <a class="next-link" href="es-Galaxy.html">
+            <a class="next-link" href="/html/spanish/Galaxy.html">
                 <div class="nav-title">Siguiente</div>
                 <div class="next-title">Galaxy</div>
             </a>
