--- a/html/spanish/jerk-project.html
+++ b/html/spanish/jerk-project.html
@@ -417,7 +417,7 @@
         <!-- project-detail Two Columns | End -->
         <section class="white-bg">
             <div class="col-lg-12 text-center">
-                <a class="next-link" href="Galaxy.html">
+                <a class="next-link" href="/html/english/Galaxy.html">
                     <div class="nav-title">Next Work</div>
                     <div class="next-title">Galaxy</div>
                 </a>
