--- a/html/english/Love-Letter.html
+++ b/html/english/Love-Letter.html
@@ -141,55 +141,55 @@
         <div class="row lightbox-gallery masonry top_120">
           <!-- a image -->
           <div class="col-lg-4 image">
-            <a href="img/works/work-1/01.jpg" class="lightbox">
+            <a href="/img/works/work-1/01.jpg" class="lightbox">
               <img src="/img/works/work-2/02.jpg" alt="">
             </a>
           </div>
           <!-- a image -->
           <div class="col-lg-4 image">
-            <a href="img/works/work-1/03.jpg" class="lightbox">
+            <a href="/img/works/work-1/03.jpg" class="lightbox">
               <img src="/img/works/work-1/03.jpg" alt="">
             </a>
           </div>
           <!-- a image -->
           <div class="col-lg-4 image">
-            <a href="img/works/work-2/04.jpg" class="lightbox">
+            <a href="/img/works/work-2/04.jpg" class="lightbox">
               <img src="/img/works/work-2/04.jpg" alt="">
             </a>
           </div>
           <!-- a image -->
           <div class="col-lg-4 image">
-            <a href="img/works/work-2/05.jpg" class="lightbox">
+            <a href="/img/works/work-2/05.jpg" class="lightbox">
               <img src="/img/works/work-2/05.jpg" alt="">
             </a>
           </div>
           <!-- a image -->
           <div class="col-lg-4 image">
-            <a href="img/works/work-2/06.jpg" class="lightbox">
+            <a href="/img/works/work-2/06.jpg" class="lightbox">
               <img src="/img/works/work-2/06.jpg" alt="">
             </a>
           </div>
           <!-- a image -->
           <div class="col-lg-4 image">
-            <a href="img/works/work-2/07.jpg" class="lightbox">
+            <a href="/img/works/work-2/07.jpg" class="lightbox">
               <img src="/img/works/work-2/07.jpg" alt="">
             </a>
           </div>
           <!-- a image -->
           <div class="col-lg-4 image">
-            <a href="img/works/work-2/08.jpg" class="lightbox">
+            <a href="/img/works/work-2/08.jpg" class="lightbox">
               <img src="/img/works/work-2/08.jpg" alt="">
             </a>
           </div>
           <!-- a image -->
           <div class="col-lg-4 image">
-            <a href="img/works/work-2/09.jpg" class="lightbox">
+            <a href="/img/works/work-2/09.jpg" class="lightbox">
               <img src="/img/works/work-2/09.jpg" alt="">
             </a>
           </div>
           <!-- a image -->
           <div class="col-lg-4 image">
-            <a href="img/works/work-2/10.jpg" class="lightbox">
+            <a href="/img/works/work-2/10.jpg" class="lightbox">
               <img src="/img/works/work-2/10.jpg" alt="">
             </a>
           </div>
