--- a/html/spanish/jerk-project.html
+++ b/html/spanish/jerk-project.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="The Jerk Project" />
     <meta property="og:description" content="The tech industry is a boys club, so it comes as no surprise that U.S.
     tech companies do not provide a supportive workplace for women..." />
-    <meta property="og:image" content="img/works/Jerk-project/jerk-project-Thumbnail.png" />
+    <meta property="og:image" content="/img/works/Jerk-project/jerk-project-Thumbnail.png" />
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css" />
@@ -249,7 +249,7 @@
                 <div class="lightbox-gallery masonry justify-content-center">
                     <!-- a image -->
                     <div class="col-lg-4 col-sm-12 image container-img-for-character align-self-center">
-                        <a href="img/works/Jerk-project/Characters/Value/Reward-Master-text.png" alt="Reward Master"
+                        <a href="/img/works/Jerk-project/Characters/Value/Reward-Master-text.png" alt="Reward Master"
                             class="lightbox">
                             <img src="/img/works/Jerk-project/Characters/Value/Reward-Master.png" alt="Reward Master">
                             <div class="overlay-img-for-character padding_10_item round-corners">
@@ -259,7 +259,7 @@
                     </div>
                     <!-- a image -->
                     <div class="col-lg-4 col-sm-12 image container-img-for-character align-self-center">
-                        <a href="img/works/Jerk-project/Characters/Value/Coach-text.png" alt="Coach" class="lightbox">
+                        <a href="/img/works/Jerk-project/Characters/Value/Coach-text.png" alt="Coach" class="lightbox">
                             <img src="/img/works/Jerk-project/Characters/Value/Coach.png" alt="Coach">
                             <div class="overlay-img-for-character padding_10_item round-corners">
                                 <div class="text-for-character-overlay">Coach</div>
@@ -268,7 +268,7 @@
                     </div>
                     <!-- a image -->
                     <div class="col-lg-4 col-sm-12 image container-img-for-character align-self-center">
-                        <a href="img/works/Jerk-project/Characters/Value/Grateful-Maker-text.png" alt="Grateful Maker"
+                        <a href="/img/works/Jerk-project/Characters/Value/Grateful-Maker-text.png" alt="Grateful Maker"
                             class="lightbox">
                             <img src="/img/works/Jerk-project/Characters/Value/Grateful-Maker.png" alt="Grateful Maker">
                             <div class="overlay-img-for-character padding_10_item round-corners">
@@ -278,7 +278,7 @@
                     </div>
                     <!-- a image -->
                     <div class="col-lg-4 col-sm-12 image container-img-for-character align-self-center">
-                        <a href="img/works/Jerk-project/Characters/Value/Consumate-Prodessional-text.png"
+                        <a href="/img/works/Jerk-project/Characters/Value/Consumate-Prodessional-text.png"
                             alt="Consumate Prodessional" class="lightbox">
                             <img src="/img/works/Jerk-project/Characters/Value/Consumate-Prodessional.png"
                                 alt="Consumate Prodessional">
@@ -289,8 +289,8 @@
                     </div>
                     <!-- a image -->
                     <div class="col-lg-4 col-sm-12 image container-img-for-character align-self-center">
-                        <a href="img/works/Jerk-project/Characters/Value/Thank-You-Maven-Text.png" alt="Thank-You Maven"
-                            class="lightbox">
+                        <a href="/img/works/Jerk-project/Characters/Value/Thank-You-Maven-Text.png"
+                            alt="Thank-You Maven" class="lightbox">
                             <img src="/img/works/Jerk-project/Characters/Value/Thank-You-Maven.png"
                                 alt="Thank-You Maven">
                             <div class="overlay-img-for-character padding_10_item round-corners">
@@ -300,7 +300,7 @@
                     </div>
                     <!-- a image -->
                     <div class="col-lg-4 col-sm-12 image container-img-for-character align-self-center">
-                        <a href="img/works/Jerk-project/Characters/Value/CHAMPION-text.png" alt="Champion"
+                        <a href="/img/works/Jerk-project/Characters/Value/CHAMPION-text.png" alt="Champion"
                             class="lightbox">
                             <img src="/img/works/Jerk-project/Characters/Value/CHAMPION.png" alt="Champion">
                             <div class="overlay-img-for-character padding_10_item round-corners">
@@ -326,7 +326,7 @@
                 <div class="lightbox-gallery masonry justify-content-center">
                     <!-- a image -->
                     <div class="col-lg-4 col-sm-12 image container-img-for-character align-self-center">
-                        <a href="img/works/Jerk-project/Characters/Jerks/Megaphone-Mocker-Text.png"
+                        <a href="/img/works/Jerk-project/Characters/Jerks/Megaphone-Mocker-Text.png"
                             alt="Megaphone Mocker" class="lightbox">
                             <img src="/img/works/Jerk-project/Characters/Jerks/Megaphone-Mocker.png"
                                 alt="Megaphone Mocker">
@@ -337,8 +337,8 @@
                     </div>
                     <!-- a image -->
                     <div class="col-lg-4 col-sm-12 image container-img-for-character align-self-center">
-                        <a href="img/works/Jerk-project/Characters/Jerks/Values-Violator-text.png" alt="Values Violator"
-                            class="lightbox">
+                        <a href="/img/works/Jerk-project/Characters/Jerks/Values-Violator-text.png"
+                            alt="Values Violator" class="lightbox">
                             <img src="/img/works/Jerk-project/Characters/Jerks/Values-Violator.png"
                                 alt="Values Violator">
                             <div class="overlay-img-for-character padding_10_item round-corners">
@@ -348,7 +348,7 @@
                     </div>
                     <!-- a image -->
                     <div class="col-lg-4 col-sm-12 image container-img-for-character align-self-center">
-                        <a href="img/works/Jerk-project/Characters/Jerks/Time-Waster-text.png" alt="Time Waster"
+                        <a href="/img/works/Jerk-project/Characters/Jerks/Time-Waster-text.png" alt="Time Waster"
                             class="lightbox">
                             <img src="/img/works/Jerk-project/Characters/Jerks/Time-Waster.png" alt="Time Waster">
                             <div class="overlay-img-for-character padding_10_item round-corners">
@@ -358,7 +358,7 @@
                     </div>
                     <!-- a image -->
                     <div class="col-lg-4 col-sm-12 image container-img-for-character align-self-center">
-                        <a href="img/works/Jerk-project/Characters/Jerks/Role-Stomper-text.png" alt="Role Stomper"
+                        <a href="/img/works/Jerk-project/Characters/Jerks/Role-Stomper-text.png" alt="Role Stomper"
                             class="lightbox">
                             <img src="/img/works/Jerk-project/Characters/Jerks/Role-Stomper.png" alt="Role Stomper">
                             <div class="overlay-img-for-character padding_10_item round-corners">
@@ -368,7 +368,7 @@
                     </div>
                     <!-- a image -->
                     <div class="col-lg-4 col-sm-12 image container-img-for-character align-self-center">
-                        <a href="img/works/Jerk-project/Characters/Jerks/Demeaner-text.png" alt="Demeaner"
+                        <a href="/img/works/Jerk-project/Characters/Jerks/Demeaner-text.png" alt="Demeaner"
                             class="lightbox">
                             <img src="/img/works/Jerk-project/Characters/Jerks/Demeaner.png" alt="Demeaner">
                             <div class="overlay-img-for-character padding_10_item round-corners">
@@ -378,7 +378,7 @@
                     </div>
                     <!-- a image -->
                     <div class="col-lg-4 col-sm-12 image container-img-for-character align-self-center">
-                        <a href="img/works/Jerk-project/Characters/Jerks/Decision-Dominator-text.png"
+                        <a href="/img/works/Jerk-project/Characters/Jerks/Decision-Dominator-text.png"
                             alt="Decision Dominator" class="lightbox">
                             <img src="/img/works/Jerk-project/Characters/Jerks/Decision-Dominator.png"
                                 alt="Decision Dominator">
