New Index Menu of option for www.peterveras.com
New layout with EN and ES options
*Looking good

--- a/html/english/Storytelling-Bootcamp.html
+++ b/html/english/Storytelling-Bootcamp.html
@@ -213,8 +213,8 @@
                 src="/img/works/work-4/Top-10-tips-STORYTELLING-BOOTCAMP.png" alt="Take aways">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
-        <!--footer-->
 
+        <!--NEXT PROJECT START-->
         <section class=" white-bg">
             <div class="col-lg-12 text-center">
                 <a class="next-link" href="/html/english/Racing-Extinction.html">
@@ -224,7 +224,9 @@
             </div>
         </section>
 
-        <!-- footer Desktop Start -->
+        <!-- NEXT PROJECT END -->
+
+        <!-- ====== footer====== Desktop START -->
         <footer id="contact" data-midnight="dark"
             class="dark-bg padding_90 d-none d-md-block d-lg-block d-xl-block d-xs-none d-sm-none">
             <div class="container project-detail padtop_15">
@@ -237,25 +239,30 @@
                             target="_blank">verastegui.peter@gmail.com</a>
                     </div>
                     <div class="col bottom_30">
+                        <a href="https://wa.me/59177839964"><i class="fab fa-whatsapp" aria-hidden="true"></i> </a>
+                        &nbsp; &nbsp;&nbsp; &nbsp;
                         <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin"
                                 aria-hidden="true"></i> </a>
                         &nbsp; &nbsp;&nbsp; &nbsp;
+                        <a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
+                                aria-hidden="true"></i></a>
+                        &nbsp; &nbsp;&nbsp; &nbsp;
                         <a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i>
                         </a>
-                        &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i
-                                class="fab fa-pinterest" aria-hidden="true"></i> </a>
+                        </a>
                     </div>
+                    <!-- Fix on mobile hide and show feature and in English page too also for the resume part above -->
                     <div class="col bottom_30">
-                        <p class="white-text">
+                        <p class="grey-text">
                             &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
                     </div>
                 </div>
             </div>
             </div>
         </footer>
-        <!-- footer Desktop End-->
+        <!-- ====== footer====== Desktop END -->
 
-        <!-- footer Mobile Start -->
+        <!-- ====== footer====== Mobile START -->
         <footer id="contact" data-midnight="dark"
             class="dark-bg padding_90 d-sm-block d-xs-block d-md-none d-lg-none d-xl-none">
             <div class="container project-detail padtop_15">
@@ -267,24 +274,29 @@
                         <a href="mailto:verastegui.peter@gmail.com?Subject=Hello"
                             target="_blank">verastegui.peter@gmail.com</a>
                     </div>
-                    <div class="col-lg-2  bottom_30">
+                    <div class="col-lg-2 bottom_30">
+                        <a href="https://wa.me/59177839964"><i class="fab fa-whatsapp" aria-hidden="true"></i> </a>
+                        &nbsp; &nbsp;&nbsp; &nbsp;
                         <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin"
                                 aria-hidden="true"></i> </a>
                         &nbsp; &nbsp;&nbsp; &nbsp;
+                        <a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
+                                aria-hidden="true"></i></a>
+                        &nbsp; &nbsp;&nbsp; &nbsp;
                         <a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i>
                         </a>
-                        &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i
-                                class="fab fa-pinterest" aria-hidden="true"></i> </a>
                     </div>
-                    <div class="col-lg-2  bottom_30">
-                        <p class="white-text">
+                    <!-- Fix on mobile hide and show feature and in English page too also for the resume part above -->
+                    <div class="col-lg-2 bottom_30">
+                        <p class="grey-text">
                             &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
                     </div>
                 </div>
             </div>
             </div>
         </footer>
-        <!-- footer Mobile End-->
+        <!-- ====== footer====== Mobile END -->
+
 
     </main>
 
