--- a/html/english/Library-of-Congress.html
+++ b/html/english/Library-of-Congress.html
@@ -233,6 +233,8 @@
         <!-- a image -->
       </div>
     </section>
+
+    <!--NEXT START -->
     <section>
       <div class="col-lg-12 text-center">
         <a class="next-link" href="/html/english/Galaxy.html">
@@ -241,8 +243,8 @@
         </a>
       </div>
     </section>
-
-    <!-- footer Desktop Start -->
+    <!--NEXT END-->
+    <!-- ====== footer====== Desktop START -->
     <footer id="contact" data-midnight="dark"
       class="dark-bg padding_90 d-none d-md-block d-lg-block d-xl-block d-xs-none d-sm-none">
       <div class="container project-detail padtop_15">
@@ -254,23 +256,28 @@
             <a href="mailto:verastegui.peter@gmail.com?Subject=Hello" target="_blank">verastegui.peter@gmail.com</a>
           </div>
           <div class="col bottom_30">
+            <a href="https://wa.me/59177839964"><i class="fab fa-whatsapp" aria-hidden="true"></i> </a>
+            &nbsp; &nbsp;&nbsp; &nbsp;
             <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;
+            <a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
+                aria-hidden="true"></i></a>
+            &nbsp; &nbsp;&nbsp; &nbsp;
             <a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
-                aria-hidden="true"></i> </a>
+            </a>
           </div>
+          <!-- Fix on mobile hide and show feature and in English page too also for the resume part above -->
           <div class="col bottom_30">
-            <p class="white-text">
+            <p class="grey-text">
               &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
           </div>
         </div>
       </div>
       </div>
     </footer>
-    <!-- footer Desktop End-->
+    <!-- ====== footer====== Desktop END -->
 
-    <!-- footer Mobile Start -->
+    <!-- ====== footer====== Mobile START -->
     <footer id="contact" data-midnight="dark"
       class="dark-bg padding_90 d-sm-block d-xs-block d-md-none d-lg-none d-xl-none">
       <div class="container project-detail padtop_15">
@@ -281,22 +288,26 @@
           <div class="col-lg-2 bottom_30">
             <a href="mailto:verastegui.peter@gmail.com?Subject=Hello" target="_blank">verastegui.peter@gmail.com</a>
           </div>
-          <div class="col-lg-2  bottom_30">
+          <div class="col-lg-2 bottom_30">
+            <a href="https://wa.me/59177839964"><i class="fab fa-whatsapp" aria-hidden="true"></i> </a>
+            &nbsp; &nbsp;&nbsp; &nbsp;
             <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;
+            <a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
+                aria-hidden="true"></i></a>
+            &nbsp; &nbsp;&nbsp; &nbsp;
             <a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
-                aria-hidden="true"></i> </a>
           </div>
-          <div class="col-lg-2  bottom_30">
-            <p class="white-text">
+          <!-- Fix on mobile hide and show feature and in English page too also for the resume part above -->
+          <div class="col-lg-2 bottom_30">
+            <p class="grey-text">
               &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
           </div>
         </div>
       </div>
       </div>
     </footer>
-    <!-- footer Mobile End-->
+    <!-- ====== footer====== Mobile END -->
   </main>
 
 
