--- a/html/english/home.html
+++ b/html/english/home.html
@@ -294,7 +294,7 @@
 
 
           <h3 class="white-text bottom_15">Giro54</h3>
-          <p class="padbot_30 grey-text">Partner,<br> Jan 2024 – Present,<br> Santa Cruz, Bolivia</p>
+          <p class="padbot_30 grey-text">Partner | Director of UX,<br> Jan 2024 – Present,<br> Santa Cruz, Bolivia</p>
 
 
         </div>
@@ -417,7 +417,7 @@
 
 
           <h3 class="white-text bottom_15">Giro54</h3>
-          <p class="padbot_30 grey-text">Partner,<br> Jan 2024 – Present,<br> Santa Cruz, Bolivia</p>
+          <p class="padbot_30 grey-text">Partner | Director of UX,<br> Jan 2024 – Present,<br> Santa Cruz, Bolivia</p>
 
 
         </div>
@@ -515,8 +515,7 @@
     </div>
     <!--  ======= RESUME - Mobile - End =======  -->
 
-
-    <!-- footer Desktop Start -->
+    <!-- ====== footer====== Desktop START -->
     <footer id="contact" data-midnight="dark"
       class="dark-bg padding_90 d-none d-md-block d-lg-block d-xl-block d-xs-none d-sm-none">
       <div class="container project-detail padtop_15">
@@ -528,23 +527,28 @@
             <a href="mailto:verastegui.peter@gmail.com?Subject=Hello" target="_blank">verastegui.peter@gmail.com</a>
           </div>
           <div class="col bottom_30">
+            <a href="https://wa.me/59177839964"><i class="fab fa-whatsapp" aria-hidden="true"></i> </a>
+            &nbsp; &nbsp;&nbsp; &nbsp;
             <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;
+            <a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
+                aria-hidden="true"></i></a>
+            &nbsp; &nbsp;&nbsp; &nbsp;
             <a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
-                aria-hidden="true"></i> </a>
+            </a>
           </div>
+          <!-- Fix on mobile hide and show feature and in English page too also for the resume part above -->
           <div class="col bottom_30">
-            <p class="white-text">
+            <p class="grey-text">
               &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
           </div>
         </div>
       </div>
       </div>
     </footer>
-    <!-- footer Desktop End-->
+    <!-- ====== footer====== Desktop END -->
 
-    <!-- footer Mobile Start -->
+    <!-- ====== footer====== Mobile START -->
     <footer id="contact" data-midnight="dark"
       class="dark-bg padding_90 d-sm-block d-xs-block d-md-none d-lg-none d-xl-none">
       <div class="container project-detail padtop_15">
@@ -555,22 +559,27 @@
           <div class="col-lg-2 bottom_30">
             <a href="mailto:verastegui.peter@gmail.com?Subject=Hello" target="_blank">verastegui.peter@gmail.com</a>
           </div>
-          <div class="col-lg-2  bottom_30">
+          <div class="col-lg-2 bottom_30">
+            <a href="https://wa.me/59177839964"><i class="fab fa-whatsapp" aria-hidden="true"></i> </a>
+            &nbsp; &nbsp;&nbsp; &nbsp;
             <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;
+            <a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
+                aria-hidden="true"></i></a>
+            &nbsp; &nbsp;&nbsp; &nbsp;
             <a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
-                aria-hidden="true"></i> </a>
           </div>
-          <div class="col-lg-2  bottom_30">
-            <p class="white-text">
+          <!-- Fix on mobile hide and show feature and in English page too also for the resume part above -->
+          <div class="col-lg-2 bottom_30">
+            <p class="grey-text">
               &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
           </div>
         </div>
       </div>
       </div>
     </footer>
-    <!-- footer Mobile End-->
+    <!-- ====== footer====== Mobile END -->
+
   </main>
 
   <!-- Javascripts -->
