--- a/html/spanish/Racing-Extinction.html
+++ b/html/spanish/Racing-Extinction.html
@@ -219,6 +219,7 @@
     </section>
     <!-- ======= portfolio carousel | End ======= -->
 
+    <!--NEXT START-->
     <section class="white-bg" data-midnight="white">
       <div class="col-lg-12 text-center">
         <a class="next-link" href="/html/spanish/Gallo-Guapo.html">
@@ -227,9 +228,45 @@
         </a>
       </div>
     </section>
+    <!--NEXT END -->
 
-    <!-- footer -->
-    <footer id="contact" data-midnight="dark" class="dark-bg padding_90">
+    <!-- ====== footer====== Desktop START -->
+    <footer id="contact" data-midnight="dark"
+      class="dark-bg padding_90 d-none d-md-block d-lg-block d-xl-block d-xs-none d-sm-none">
+      <div class="container project-detail padtop_15">
+        <div class="row lightbox-gallery">
+          <div class="col-lg-4">
+            <h2 class="white-text subtitle bottom_30">Contacto</h2>
+          </div>
+          <div class="col bottom_30">
+            <a href="mailto:verastegui.peter@gmail.com?Subject=Hello" target="_blank">verastegui.peter@gmail.com</a>
+          </div>
+          <div class="col bottom_30">
+            <a href="https://wa.me/59177839964"><i class="fab fa-whatsapp" aria-hidden="true"></i> </a>
+            &nbsp; &nbsp;&nbsp; &nbsp;
+            <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
+            &nbsp; &nbsp;&nbsp; &nbsp;
+            <a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
+                aria-hidden="true"></i></a>
+            &nbsp; &nbsp;&nbsp; &nbsp;
+            <a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i>
+            </a>
+            </a>
+          </div>
+          <!-- Fix on mobile hide and show feature and in English page too also for the resume part above -->
+          <div class="col bottom_30">
+            <p class="grey-text">
+              &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
+          </div>
+        </div>
+      </div>
+      </div>
+    </footer>
+    <!-- ====== footer====== Desktop END -->
+
+    <!-- ====== footer====== Mobile START -->
+    <footer id="contact" data-midnight="dark"
+      class="dark-bg padding_90 d-sm-block d-xs-block d-md-none d-lg-none d-xl-none">
       <div class="container project-detail padtop_15">
         <div class="row lightbox-gallery">
           <div class="col-lg-4">
@@ -239,20 +276,27 @@
             <a href="mailto:verastegui.peter@gmail.com?Subject=Hello" target="_blank">verastegui.peter@gmail.com</a>
           </div>
           <div class="col-lg-2 bottom_30">
+            <a href="https://wa.me/59177839964"><i class="fab fa-whatsapp" aria-hidden="true"></i> </a>
+            &nbsp; &nbsp;&nbsp; &nbsp;
             <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
-                aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
-                aria-hidden="true"></i> </a>
+            &nbsp; &nbsp;&nbsp; &nbsp;
+            <a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
+                aria-hidden="true"></i></a>
+            &nbsp; &nbsp;&nbsp; &nbsp;
+            <a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i>
+            </a>
           </div>
+          <!-- Fix on mobile hide and show feature and in English page too also for the resume part above -->
           <div class="col-lg-2 bottom_30">
-            <p class="white-text">
+            <p class="grey-text">
               &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
           </div>
         </div>
       </div>
       </div>
     </footer>
+    <!-- ====== footer====== Mobile END -->
+
   </main>
 
   <!-- Javascripts -->
