--- a/html/spanish/menu.html
+++ b/html/spanish/menu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <title>Peter Verastegui | Portfolio</title>
@@ -63,8 +63,9 @@
                 </div>
                 <div class="col justify-content-center">
                     <p class="text-center">
-                        <a style=" color: #b7b7b7" href="/index.html" title="English" rel="noreferrer">English</a>
-                        &nbsp;&nbsp;&nbsp;<a href="/html/spanish/menu.html" title="Español" rel="noreferrer">Español</a>
+                        <a href="/index.html" title="English" rel="noreferrer">English</a>
+                        &nbsp;&nbsp;&nbsp;<a style=" color: #b7b7b7" href="/html/spanish/menu.html" title="Español"
+                            rel="noreferrer">Español</a>
                     </p>
                 </div>
                 <div class="col">
@@ -78,8 +79,8 @@
             <div class="row align-items-center load-more  wow fadeInUp" data-wow-delay="0.2s">
                 <div class="col-lg-4 offset-lg-4 top_60">
                     <p class="text-center">
-                        <a href="/html/english/home.html">
-                            <button data-key="btn-ux" class="dark-bg site-btn text-center" data-tilt>DESIGN (Ixd)
+                        <a href="/html/spanish/home.html">
+                            <button data-key="btn-ux" class="dark-bg site-btn text-center" data-tilt>DISEÑO (Ixd)
                             </button>
                         </a>
                     </p>
@@ -89,7 +90,7 @@
                 <div class="col-lg-4 offset-lg-4 top_15">
                     <p class="text-center">
                         <a href="https://peterveras.github.io/photography/">
-                            <button data-key="btn-ux" class="dark-bg site-btn text-center" data-tilt>PHOTOGRAPHY
+                            <button data-key="btn-ux" class="dark-bg site-btn text-center" data-tilt>FOTOGRAFÍA
                             </button>
                         </a>
                     </p>
@@ -99,14 +100,13 @@
                 <div class="col-lg-4 offset-lg-4 top_15">
                     <p class="text-center">
                         <a href="https://peterverastegui.wordpress.com/">
-                            <button data-key="btn-ux" class="dark-bg site-btn text-center" data-tilt>WRITING
+                            <button data-key="btn-ux" class="dark-bg site-btn text-center" data-tilt>ESCRITURA
                             </button>
                         </a>
                     </p>
                 </div>
             </div>
         </div>
-
         <footer class="dark-bg">
             <div class="container text-center">
                 <div class="row">
