Index page now with language options

--- a/html/english/Galaxy.html
+++ b/html/english/Galaxy.html
@@ -611,7 +611,7 @@
           <!-- Images -->
           <div class="col-lg-6 offset-lg-3 col-md-8 offset-md-2 col-sm-12">
             <div class="project-detail text-center">
-              <h2 class="white-text text-center title bottom_30">Just kidding here is a frebbie
+              <h2 class="white-text text-center title bottom_30">😆 Just kidding here is a frebbie
               </h2>
               <a href="https://www.figma.com/file/aTIhAVP6hrjXKl14rSFVfq/Galaxy-Free-for-the-people" target="_blank">
                 <button class="site-btn  text-center  bottom_30" data-tilt>FIGMA FILE
@@ -654,7 +654,8 @@
             <a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
                 aria-hidden="true"></i></a>
             &nbsp; &nbsp;&nbsp; &nbsp;
-            <a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i> </a>
+            <a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i>
+            </a>
             </a>
           </div>
           <!-- Fix on mobile hide and show feature and in English page too also for the resume part above -->
@@ -687,7 +688,8 @@
             <a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
                 aria-hidden="true"></i></a>
             &nbsp; &nbsp;&nbsp; &nbsp;
-            <a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i> </a>
+            <a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i>
+            </a>
           </div>
           <!-- Fix on mobile hide and show feature and in English page too also for the resume part above -->
           <div class="col-lg-2 bottom_30">
