--- a/html/spanish/UI-UX-Illustrations.html
+++ b/html/spanish/UI-UX-Illustrations.html
@@ -212,9 +212,9 @@
         <!-- project-detail end -->
         <!--NEXT START-->
         <div class="col-lg-12 text-center bottom_90" data-midnight="white">
-            <a class="next-link" href="/html/spanish/Galaxy.html">
+            <a class="next-link" href="/html/spanish/toucan-template.html">
                 <div class="nav-title">Siguiente</div>
-                <div class="next-title">Galaxy</div>
+                <div class="next-title">Toucan</div>
             </a>
         </div>
         <!-- NEXT END -->
