--- a/html/spanish/USA-Today.html
+++ b/html/spanish/USA-Today.html
@@ -367,9 +367,9 @@
     <!--NEXT START-->
     <section class="white-bg">
       <div class="col-lg-12 text-center">
-        <a class="next-link" href="/html/spanish/Biodiversity-Festival.html">
+        <a class="next-link" href="/html/spanish/Creating-Change.html">
           <div class="nav-title">Siguiente</div>
-          <div class="next-title">Biodiversity Festival</div>
+          <div class="next-title">Creating Change</div>
         </a>
       </div>
     </section>
