--- a/html/spanish/toucan-template.html
+++ b/html/spanish/toucan-template.html
@@ -368,9 +368,9 @@
         <!-- Next Start-->
         <section class="white-bg">
             <div class="col align-self-center text-center">
-                <a class="next-link" href="/html/english/USA-Today.html">
+                <a class="next-link" href="/html/spanish/jerk-project.html">
                     <div class="nav-title">Next Work</div>
-                    <div class="next-title">USA Today</div>
+                    <div class="next-title">Jerk Project</div>
                 </a>
             </div>
         </section>
