--- a/html/spanish/home.html
+++ b/html/spanish/home.html
@@ -262,11 +262,11 @@
 
         <div class="image col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
           <img class="round-corners" src="/img/Profile-Peter-4.png" alt="Portrait of Peter">
-          <p class="padtop_60 grey-text">Hola, soy Peter. Un artista que trabaja con compañías, creaando productos y
-            servicios que son fáciles de usar, y mientras estoy en ello también las asesoro para que se vean realmente
+          <p class="padtop_60 grey-text">Hola, soy Peter. Un artista que trabaja con compañías, creando productos y
+            servicios que son fáciles de usar. Mientras estoy en ello también las asesoro para que se vean realmente
             bien. Para saber más de mi visita mi &nbsp;<a href="https://peterverastegui.wordpress.com/"
               rel="noopener noreferrer" target="_blank"><i class="fas fa-external-link-square-alt"
-                aria-hidden="true"></i>&nbsp;blog</a>&nbsp;o escucha mi playlist de este año en
+                aria-hidden="true"></i>&nbsp;blog</a>&nbsp;o escucha mi playlist en
             Spotify.</p>
           <br>
           <iframe style="border-radius:12px"
