--- a/html/english/home.html
+++ b/html/english/home.html
@@ -254,16 +254,10 @@
 
         <div class="image col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
           <img class="round-corners" src="/img/Profile-Peter-4.png" alt="Portrait of Peter">
-          <p class="padtop_60 grey-text">Hello, my name is Peter. I am an artist that helps companies make their
-            products easy-to-use and while I am at it I also help them look good, real good. To learn more about me
-            check out my <a href="https://peterverastegui.wordpress.com/" rel="noopener noreferrer" target="_blank"><i
-                class="fas fa-external-link-square-alt" aria-hidden="true"></i>&nbsp;blog</a>&nbsp;or listen to my
-            current Spotify playlist.</p>
+          <p class="padtop_60 grey-text">Hi, I'm Peter. I'm an artist who helps companies make their products not only easy to use but also look amazing—real amazing. If you'd like to learn more about me, check out my <a href="https://peterverastegui.wordpress.com/" rel="noopener noreferrer" target="_blank"><i
+                class="fas fa-external-link-square-alt" aria-hidden="true"></i>&nbsp;blog</a>&nbsp; or dive into this beloved playlist I've been curating for years. It features a mix of genres like Highlife, Afrobeats, Reggaeton, Hip-Hop, Electronic, Cumbia, Bachata, Reggae, Merengue, Rock, Boleros, Samba, Son, Guarija, Rumba, Mexican Regional, Pop, House, Folk, Trap... just to name a few. Enjoy!</p>
           <br>
-          <iframe style="border-radius:12px"
-            src="https://open.spotify.com/embed/playlist/0V23tKtWkwzKAdVNMAeH1s?utm_source=generator&theme=0"
-            width="100%" height="352" frameBorder="0" allowfullscreen=""
-            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+          <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6vrro8Wnv1e4tzOSSAlYUX?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
       </div>
     </div>
