--- a/html/spanish/home.html
+++ b/html/spanish/home.html
@@ -262,17 +262,11 @@
 
         <div class="image col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
           <img class="round-corners" src="/img/Profile-Peter-4.png" alt="Portrait of Peter">
-          <p class="padtop_60 grey-text">Hola, soy Peter. Un artista que trabaja con compañías, creando productos y
-            servicios que son fáciles de usar. Mientras estoy en ello también las asesoro para que se vean realmente
-            bien. Para saber más de mi visita mi &nbsp;<a href="https://peterverastegui.wordpress.com/"
+          <p class="padtop_60 grey-text">Hola, soy Peter. Soy un artista que ayuda a las empresas a hacer que sus productos no solo sean fáciles de usar, sino que también luzcan increíbles—realmente increíbles. Si quieres saber más sobre mí, dale un vistazo a mi blog &nbsp;<a href="https://peterverastegui.wordpress.com/"
               rel="noopener noreferrer" target="_blank"><i class="fas fa-external-link-square-alt"
-                aria-hidden="true"></i>&nbsp;blog</a>&nbsp;o escucha mi playlist en
-            Spotify.</p>
+                aria-hidden="true"></i>&nbsp;blog</a>&nbsp;o sumérgete en esta querida playlist que he estado curando durante años. Tiene una mezcla de géneros como Highlife, Afrobeats, Reggaeton, Hip-Hop, Electrónica, Cumbia, Bachata, Reggae, Merengue, Rock, Boleros, Samba, Son, Guarija, Rumba, Regional Mexicano, Pop, House, Folk, Trap... por mencionar solo algunos. ¡Disfruta!</p>
           <br>
-          <iframe style="border-radius:12px"
-            src="https://open.spotify.com/embed/playlist/0V23tKtWkwzKAdVNMAeH1s?utm_source=generator&theme=0"
-            width="100%" height="352" frameBorder="0" allowfullscreen=""
-            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+          <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6vrro8Wnv1e4tzOSSAlYUX?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
       </div>
     </div>
